<resources>
    <string name="app_name">ECommerce</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ecommerce">Ecommerce.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="do_you_have_an_account_log_in">Do you have an account? log in</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First Name</string>
</resources>